Add product CRUD with authorization
